<resources>
    <string name="app_name">TestRPGroupWebView</string>
    <string name="facebook_app_id">5291508437605172</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_am_start_fragment">i am start fragment</string>
    <string name="private_policy_fragment_label">Private Policy</string>
    <string name="veb_viev_fragment_label">Web View</string>
    <string name="no_internet_fragment_label">Oooops, there is no Internet</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="policy_header">Oleksandr Artiushenko built the testrpgroupwebview app as a Free app.\nThis SERVICE is provided by Oleksandr Artiushenko at no cost and is intended for use as is. This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service. If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy. The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at testrpgroupwebview unless otherwise defined in this Privacy Policy. \n\nInformation Collection and Use\n\nFor a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to emal, contacts. The information that I request will be retained on your device and is not collected by me in any way. The app does use third-party services that may collect information used to identify you. Link to the privacy policy of third-party service providers used by the app Google Play Services Facebook Unity One Signal \n\nLog Data\n\nI want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.\n\nSecurity\n\nI value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.\n\nContact Us\n\nIf you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at mr.apemi@gmail.com.</string>
    <string name="accept">accept</string>
    <string name="deny">deny</string>
    <string name="already_accept_policy">You have already accept policy, Pressed me, if you want return to Web View</string>
    <string name="text_no_internet">Sorry, but there is some error with Internet, need more time</string>
</resources>